--- a/html/bölüm sonu çalışması/contact.html
+++ b/html/bölüm sonu çalışması/contact.html
@@ -29,7 +29,7 @@
     <section>
       <article>
         <h2>İletişim</h2>
-        <img src="https://picsum.photos/id/426/600/300" alt="Yazi 1" />
+        <img src="https://picsum.photos/id/426/600/300" />
 
         <p>Adres:</p>
         <address>
