--- a/html/bölüm sonu çalışması/index.html
+++ b/html/bölüm sonu çalışması/index.html
@@ -29,7 +29,7 @@
     <section>
       <article>
         <h2>Birinci Yazı</h2>
-        <img src="https://picsum.photos/id/134/600/300" alt="Yazi 1" />
+        <img src="https://picsum.photos/id/134/600/300" />
 
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, est.
